--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
        <artifactId>selenium-remote-driver</artifactId>
        <version>3.141.59</version>
     </dependency>
-	 <dependency>
+	<dependency>
 	    <groupId>org.apache.maven.plugins</groupId>
 	    <artifactId>maven-surefire-plugin</artifactId>
 	    <version>3.0.0-M5</version>
@@ -96,8 +96,12 @@
           <version>3.8.0</version>
         </plugin>
 		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.0.0-M5</version>
+          <configuration>
+          		<skipTest>true</skipTest>	
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
